@@ -1,16 +1,16 @@
 DIST pv-0.9.6.tar.gz 99961 RMD160 ecce86be892d8ff594daf95b3d3d483debbe7bfe SHA1 295107b15c92404095f761b45b156ac51e345e6b SHA256 d0ec6c1bbd75c6df97239a53b9c18aed792123bb07eb9acbe4f12c572b41d8b6
-EBUILD pv-0.9.6.ebuild 626 RMD160 2520f3ad2f15ef406987139edbd2c551a22648ea SHA1 95f075efc71846951f2f308a7787aeb3c7d2d873 SHA256 39e17e0984339a0e5024ec7abd11908c23f3bdacaf38427e5aed51c87f414769
-MD5 23e8a499e5d4236cd6c8b9ef950ce2e1 pv-0.9.6.ebuild 626
-RMD160 2520f3ad2f15ef406987139edbd2c551a22648ea pv-0.9.6.ebuild 626
-SHA256 39e17e0984339a0e5024ec7abd11908c23f3bdacaf38427e5aed51c87f414769 pv-0.9.6.ebuild 626
-MISC ChangeLog 1678 RMD160 435ac57e6fa56a9ef3df1bb6c49ce87db2fa0535 SHA1 71a8b7b8a49f16e501af641e9d56c2a9d6350422 SHA256 6c676f722799e8409539471296df52af9bfd0cbf0b2dd2b06d81cb46d14ca467
-MD5 66268e306c39d35b6bc569deb626c6dc ChangeLog 1678
-RMD160 435ac57e6fa56a9ef3df1bb6c49ce87db2fa0535 ChangeLog 1678
-SHA256 6c676f722799e8409539471296df52af9bfd0cbf0b2dd2b06d81cb46d14ca467 ChangeLog 1678
-MISC metadata.xml 245 RMD160 81d0c116517a0ed796a727cc156601c038f8462c SHA1 740f14d7efbc4fb579755a1b740af85f20d71d2b SHA256 4c25e96fc0d5c20b7bc313c4a67637523833173070f8badca27273ab6a1b6a02
-MD5 51334b67d2cbed22e0efec4143bc6ff0 metadata.xml 245
-RMD160 81d0c116517a0ed796a727cc156601c038f8462c metadata.xml 245
-SHA256 4c25e96fc0d5c20b7bc313c4a67637523833173070f8badca27273ab6a1b6a02 metadata.xml 245
+EBUILD pv-0.9.6.ebuild 623 RMD160 7ddb312cea374dd50ed5d8fd8e582408f5f716dd SHA1 720a1e1e44af1533ac5623d262c93a97e695e514 SHA256 9636a3fe236b03a8c002ff88ab9d7736f946b8b91684390f8bf4bbd53664c218
+MD5 ddcd5d795d8fbbf4256e2d6e20081310 pv-0.9.6.ebuild 623
+RMD160 7ddb312cea374dd50ed5d8fd8e582408f5f716dd pv-0.9.6.ebuild 623
+SHA256 9636a3fe236b03a8c002ff88ab9d7736f946b8b91684390f8bf4bbd53664c218 pv-0.9.6.ebuild 623
+MISC ChangeLog 1874 RMD160 e0b64be51dc181eec6b9e08b3c0bcac76c5968c9 SHA1 262bdd5a2db800e83d9b4a9ce9964d0fb873dcb4 SHA256 a9b3fa5f13065803a2f74e3a1f8e5839ea03378dc4564a27e5909dc07a7ca6ff
+MD5 770e12c64345acebf07c0a681e1ef5d2 ChangeLog 1874
+RMD160 e0b64be51dc181eec6b9e08b3c0bcac76c5968c9 ChangeLog 1874
+SHA256 a9b3fa5f13065803a2f74e3a1f8e5839ea03378dc4564a27e5909dc07a7ca6ff ChangeLog 1874
+MISC metadata.xml 234 RMD160 eba4806545de0d7dfd954fe889ac8e82f7be1484 SHA1 03dd609a4efde867c4b12eaae5eb5cc44f7ebd53 SHA256 5085e7eb7655a7c639d97404f04d8732cbf17e72688a61ecd2e0967ac2a5711d
+MD5 0b1b20822379b31df509f8d7aa516558 metadata.xml 234
+RMD160 eba4806545de0d7dfd954fe889ac8e82f7be1484 metadata.xml 234
+SHA256 5085e7eb7655a7c639d97404f04d8732cbf17e72688a61ecd2e0967ac2a5711d metadata.xml 234
 MD5 7e61eb644e0751ecca6a140c904b6761 files/digest-pv-0.9.6 223
 RMD160 d2bcf36aa9b6f98d88cd8d1a23e5bfee72b189e7 files/digest-pv-0.9.6 223
 SHA256 c5d00379e7ab9f8c9058891d46ad413435fcdddf4fbf4038a3469380e8335c87 files/digest-pv-0.9.6 223
