@@ -3,8 +3,7 @@
 <pkgmetadata>
 <herd>no-herd</herd>
 <maintainer>
-<email>avenj@gentoo.org</email>
-<name>Jon Portnoy</name>
+  <email>maintainer-needed@gentoo.org</email>
 </maintainer>
 </pkgmetadata>
 
