@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/pv/pv-0.9.6.ebuild,v 1.4 2006/09/16 14:02:23 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/pv/pv-0.9.6.ebuild,v 1.5 2007/03/12 14:58:12 armin76 Exp $
 
 EAPI="prefix"
 
