@@ -1,6 +1,12 @@
 # ChangeLog for app-misc/pv
-# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/pv/ChangeLog,v 1.16 2006/09/16 14:02:23 dertobi123 Exp $
+# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-misc/pv/ChangeLog,v 1.18 2007/03/12 14:58:12 armin76 Exp $
+
+  12 Mar 2007; Raúl Porcel <armin76@gentoo.org> pv-0.9.6.ebuild:
+  x86 stable
+
+  21 Feb 2007; Charlie Shepherd <masterdriverz@gentoo.org> metadata.xml:
+  avenj has retired - removing from metadata
 
   16 Sep 2006; Tobias Scherbaum <dertobi123@gentoo.org> pv-0.9.6.ebuild:
   ppc stable
